--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "keywords": [],
   "author": "",
   "engines": {
-    "node": "22.1.0"
-  },
+ "node": "20.x"   },
   "license": "ISC",
   "description": "",
   "dependencies": {
