--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
-  "name": "landing_page_backend",
+  "name": "your-project-name",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
-
-  "keywords": [],
-  "author": "",
   "engines": {
-    "node": "22.1.0"
+    "node": "22.x"
   },
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "body-parser": "^1.20.3",
+    "express": "^4.17.1",
     "cors": "^2.8.5",
-    "express": "^4.21.0"
+    "body-parser": "^1.19.0",
+    "uuid": "^8.3.2"
   }
 }
