--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "your-project-name",
+  "name": "landing_page_backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+
+  "keywords": [],
+  "author": "",
   "engines": {
-    "node": "20.x"
+    "node": "20.1.0"
   },
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "express": "^4.17.1",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "body-parser": "^1.19.0",
-    "uuid": "^8.3.2"
+    "express": "^4.21.0"
   }
 }
