--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 
   "keywords": [],
   "author": "",
-
+  "engines": {
+    "node": "22.1.0"
+  },
   "license": "ISC",
   "description": "",
   "dependencies": {
